Closed Bug 1157573 Opened 9 years ago Closed 9 years ago

Intermittent test_clearHistory_shutdown.js | application crashed [@ mozilla::dom::indexedDB::`anonymous namespace'::DatabaseConnection::FinishWriteTransaction()]

Categories

(Core :: Storage: IndexedDB, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox38 --- unaffected
firefox39 --- unaffected
firefox40 --- fixed
firefox-esr31 --- unaffected
b2g-v2.2 --- unaffected
b2g-master --- fixed

People

(Reporter: philor, Assigned: bent.mozilla)

References

Details

(Keywords: assertion, intermittent-failure)

Attachments

(1 file)

      No description provided.
Even if the test is in places folder, it's an assertion in indexedDB

19:16:31 INFO - PROCESS | 192 | [192] WARNING: 'QuotaClient::IsShuttingDownOnNonMainThread()', file c:/builds/moz2_slave/m-in-w32-d-0000000000000000000/build/src/dom/indexedDB/ActorsParent.cpp, line 18258
19:16:31 INFO - "CONSOLE_MESSAGE: (warn) [JavaScript Error: "IndexedDB UnknownErr: ActorsParent.cpp:18260"]"
19:16:31 INFO - "CONSOLE_MESSAGE: (warn) [JavaScript Error: "IndexedDB UnknownErr: ActorsParent.cpp:11511"]"
19:16:31 INFO - "CONSOLE_MESSAGE: (warn) [JavaScript Error: "UnknownError"]"
19:16:31 INFO - PROCESS | 192 | Assertion failure: mDEBUGInWriteTransaction, at c:/builds/moz2_slave/m-in-w32-d-0000000000000000000/build/src/dom/indexedDB/ActorsParent.cpp:8465
19:16:31 INFO - PROCESS | 192 | [192] WARNING: 'quotaClient->IsShuttingDown()', file c:/builds/moz2_slave/m-in-w32-d-0000000000000000000/build/src/dom/indexedDB/ActorsParent.cpp, line 17140
19:16:31 INFO - PROCESS | 192 | [192] WARNING: 'NS_FAILED(rv)', file c:/builds/moz2_slave/m-in-w32-d-0000000000000000000/build/src/dom/indexedDB/ActorsParent.cpp, line 17056
19:16:31 INFO - "CONSOLE_MESSAGE: (warn) [JavaScript Error: "IndexedDB UnknownErr: ActorsParent.cpp:17141"]"
19:16:31 INFO - "CONSOLE_MESSAGE: (warn) [JavaScript Error: "UnknownError"]"
Component: Places → DOM: IndexedDB
Product: Toolkit → Core
Attached patch Patch, v1Splinter Review
This is mostly just a DEBUG fix, but there's a chance without it we could get a connection stuck for a while in a slower mode where it's creating an implicit transaction for every request.
Assignee: nobody → bent.mozilla
Status: NEW → ASSIGNED
Attachment #8596777 - Flags: review?(Jan.Varga)
Comment on attachment 8596777 [details] [diff] [review]
Patch, v1

Review of attachment 8596777 [details] [diff] [review]:
-----------------------------------------------------------------

Looks good.
Attachment #8596777 - Flags: review?(Jan.Varga) → review+
https://hg.mozilla.org/mozilla-central/rev/529db1452e1e
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Was this fallout from bug 1156063?
Flags: needinfo?(bent.mozilla)
No, bug 1131766.
Blocks: 1131766
Flags: needinfo?(bent.mozilla)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: