Bug 1157573 - Fix transaction rollback assertions for when a transaction was never started, r=janv.